.antlr/BcParser.java
// Generated from d:\Programming\cop4020\project_2\Bc.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BcParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, FLOAT=37, ID=38, OP=39, 
		END_EXPR=40, WS=41, COMMENT=42, COMMENT2=43, OR=44, AND=45, NOT=46, EQ=47, 
		LT=48, GT=49, NE=50;
	public static final int
		RULE_s = 0, RULE_exprList = 1, RULE_topExpr = 2, RULE_adv_expr = 3, RULE_boolean_expr = 4, 
		RULE_expr = 5, RULE_assignment_expr = 6;
	public static final String[] ruleNames = {
		"s", "exprList", "topExpr", "adv_expr", "boolean_expr", "expr", "assignment_expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if['", "'] then '", "'elif['", "'else'", "'while['", "'] do'", 
		"'done'", "'for['", "';'", "']'", "'('", "')'", "'++'", "'--'", "'-'", 
		"'^'", "'*'", "'/'", "'%'", "'+'", "'^='", "'*='", "'/='", "'%='", "'+='", 
		"'-='", "'read()'", "'sqrt('", "'s('", "'c('", "'l('", "'e('", "','", 
		"'='", "'define'", "'return'", null, null, null, null, null, null, null, 
		"'||'", "'&&'", "'!'", "'=='", "'<'", "'>'", "'!='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "FLOAT", "ID", "OP", "END_EXPR", "WS", "COMMENT", "COMMENT2", "OR", 
		"AND", "NOT", "EQ", "LT", "GT", "NE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SContext extends ParserRuleContext {
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			exprList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprListContext extends ParserRuleContext {
		public List<TopExprContext> topExpr() {
			return getRuleContexts(TopExprContext.class);
		}
		public TopExprContext topExpr(int i) {
			return getRuleContext(TopExprContext.class,i);
		}
		public List<TerminalNode> END_EXPR() { return getTokens(BcParser.END_EXPR); }
		public TerminalNode END_EXPR(int i) {
			return getToken(BcParser.END_EXPR, i);
		}
		public ExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprList; }
	}

	public final ExprListContext exprList() throws RecognitionException {
		ExprListContext _localctx = new ExprListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exprList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			topExpr();
			setState(21);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(17);
					match(END_EXPR);
					setState(18);
					topExpr();
					}
					} 
				}
				setState(23);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==END_EXPR) {
				{
				setState(24);
				match(END_EXPR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopExprContext extends ParserRuleContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public Adv_exprContext adv_expr() {
			return getRuleContext(Adv_exprContext.class,0);
		}
		public TopExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topExpr; }
	}

	public final TopExprContext topExpr() throws RecognitionException {
		TopExprContext _localctx = new TopExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topExpr);
		try {
			setState(29);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(27);
				boolean_expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(28);
				adv_expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Adv_exprContext extends ParserRuleContext {
		public Adv_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adv_expr; }
	 
		public Adv_exprContext() { }
		public void copyFrom(Adv_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileLoopContext extends Adv_exprContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public List<Adv_exprContext> adv_expr() {
			return getRuleContexts(Adv_exprContext.class);
		}
		public Adv_exprContext adv_expr(int i) {
			return getRuleContext(Adv_exprContext.class,i);
		}
		public WhileLoopContext(Adv_exprContext ctx) { copyFrom(ctx); }
	}
	public static class RetexprContext extends Adv_exprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public RetexprContext(Adv_exprContext ctx) { copyFrom(ctx); }
	}
	public static class AssignmentContext extends Adv_exprContext {
		public Assignment_exprContext assignment_expr() {
			return getRuleContext(Assignment_exprContext.class,0);
		}
		public AssignmentContext(Adv_exprContext ctx) { copyFrom(ctx); }
	}
	public static class ForLoopContext extends Adv_exprContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Assignment_exprContext assignment_expr() {
			return getRuleContext(Assignment_exprContext.class,0);
		}
		public List<Adv_exprContext> adv_expr() {
			return getRuleContexts(Adv_exprContext.class);
		}
		public Adv_exprContext adv_expr(int i) {
			return getRuleContext(Adv_exprContext.class,i);
		}
		public ForLoopContext(Adv_exprContext ctx) { copyFrom(ctx); }
	}
	public static class IfLoopContext extends Adv_exprContext {
		public List<Boolean_exprContext> boolean_expr() {
			return getRuleContexts(Boolean_exprContext.class);
		}
		public Boolean_exprContext boolean_expr(int i) {
			return getRuleContext(Boolean_exprContext.class,i);
		}
		public List<Adv_exprContext> adv_expr() {
			return getRuleContexts(Adv_exprContext.class);
		}
		public Adv_exprContext adv_expr(int i) {
			return getRuleContext(Adv_exprContext.class,i);
		}
		public IfLoopContext(Adv_exprContext ctx) { copyFrom(ctx); }
	}

	public final Adv_exprContext adv_expr() throws RecognitionException {
		Adv_exprContext _localctx = new Adv_exprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_adv_expr);
		int _la;
		try {
			int _alt;
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new RetexprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				expr(0);
				}
				break;
			case 2:
				_localctx = new AssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(32);
				assignment_expr();
				}
				break;
			case 3:
				_localctx = new IfLoopContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(33);
				match(T__0);
				setState(34);
				boolean_expr();
				setState(35);
				match(T__1);
				setState(36);
				adv_expr();
				setState(44);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(37);
						match(T__2);
						setState(38);
						boolean_expr();
						setState(39);
						match(T__1);
						setState(40);
						adv_expr();
						}
						} 
					}
					setState(46);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(49);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(47);
					match(T__3);
					setState(48);
					adv_expr();
					}
					break;
				}
				}
				break;
			case 4:
				_localctx = new WhileLoopContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				match(T__4);
				setState(52);
				boolean_expr();
				setState(53);
				match(T__5);
				setState(55); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(54);
					adv_expr();
					}
					}
					setState(57); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__7) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << FLOAT) | (1L << ID))) != 0) );
				setState(59);
				match(T__6);
				}
				break;
			case 5:
				_localctx = new ForLoopContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(61);
				match(T__7);
				setState(65);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(62);
					assignment_expr();
					setState(63);
					match(T__8);
					}
					break;
				}
				setState(67);
				boolean_expr();
				setState(68);
				match(T__8);
				setState(69);
				expr(0);
				setState(70);
				match(T__9);
				setState(72); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(71);
						adv_expr();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(74); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Boolean_exprContext extends ParserRuleContext {
		public int b;
		public Boolean_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_expr; }
	 
		public Boolean_exprContext() { }
		public void copyFrom(Boolean_exprContext ctx) {
			super.copyFrom(ctx);
			this.b = ctx.b;
		}
	}
	public static class BooleanContext extends Boolean_exprContext {
		public ExprContext el;
		public Token op;
		public ExprContext er;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BooleanContext(Boolean_exprContext ctx) { copyFrom(ctx); }
	}

	public final Boolean_exprContext boolean_expr() throws RecognitionException {
		Boolean_exprContext _localctx = new Boolean_exprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_boolean_expr);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new BooleanContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				((BooleanContext)_localctx).el = expr(0);
				setState(79);
				((BooleanContext)_localctx).op = match(OR);
				setState(80);
				((BooleanContext)_localctx).er = expr(0);
				}
				break;
			case 2:
				_localctx = new BooleanContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				((BooleanContext)_localctx).el = expr(0);
				setState(83);
				((BooleanContext)_localctx).op = match(AND);
				setState(84);
				((BooleanContext)_localctx).er = expr(0);
				}
				break;
			case 3:
				_localctx = new BooleanContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				((BooleanContext)_localctx).op = match(NOT);
				setState(87);
				((BooleanContext)_localctx).el = expr(0);
				}
				break;
			case 4:
				_localctx = new BooleanContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				expr(0);
				setState(89);
				((BooleanContext)_localctx).op = match(LT);
				setState(90);
				expr(0);
				}
				break;
			case 5:
				_localctx = new BooleanContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(92);
				expr(0);
				setState(93);
				((BooleanContext)_localctx).op = match(GT);
				setState(94);
				expr(0);
				}
				break;
			case 6:
				_localctx = new BooleanContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(96);
				expr(0);
				setState(97);
				((BooleanContext)_localctx).op = match(EQ);
				setState(98);
				expr(0);
				}
				break;
			case 7:
				_localctx = new BooleanContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(100);
				expr(0);
				setState(101);
				((BooleanContext)_localctx).op = match(NE);
				setState(102);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SubContext extends ExprContext {
		public ExprContext el;
		public Token op;
		public ExprContext er;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SubContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class MultContext extends ExprContext {
		public ExprContext el;
		public Token op;
		public ExprContext er;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MultContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ModContext extends ExprContext {
		public ExprContext el;
		public Token op;
		public ExprContext er;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ModContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class MultSetContext extends ExprContext {
		public Token id;
		public Token op;
		public ExprContext er;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MultSetContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class LogContext extends ExprContext {
		public Token op;
		public ExprContext el;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LogContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class CosContext extends ExprContext {
		public Token op;
		public ExprContext el;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CosContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class IncrementContext extends ExprContext {
		public Token id;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public IncrementContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ModSetContext extends ExprContext {
		public Token id;
		public Token op;
		public ExprContext er;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ModSetContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class IdvalContext extends ExprContext {
		public Token id;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public IdvalContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class DivContext extends ExprContext {
		public ExprContext el;
		public Token op;
		public ExprContext er;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public DivContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SqrtContext extends ExprContext {
		public ExprContext el;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SqrtContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionContext extends ExprContext {
		public Token id;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public List<TerminalNode> FLOAT() { return getTokens(BcParser.FLOAT); }
		public TerminalNode FLOAT(int i) {
			return getToken(BcParser.FLOAT, i);
		}
		public FunctionContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class PowSetContext extends ExprContext {
		public Token id;
		public Token op;
		public ExprContext er;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PowSetContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SubSetContext extends ExprContext {
		public Token id;
		public Token op;
		public ExprContext er;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SubSetContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SinContext extends ExprContext {
		public Token op;
		public ExprContext el;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SinContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class PowContext extends ExprContext {
		public ExprContext el;
		public Token op;
		public ExprContext er;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public PowContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AddContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AddContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ReadContext extends ExprContext {
		public ReadContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class EContext extends ExprContext {
		public Token op;
		public ExprContext el;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public EContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ParenthesisContext extends ExprContext {
		public ExprContext el;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParenthesisContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FltContext extends ExprContext {
		public TerminalNode FLOAT() { return getToken(BcParser.FLOAT, 0); }
		public FltContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class DivSetContext extends ExprContext {
		public Token id;
		public Token op;
		public ExprContext er;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DivSetContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AddSetContext extends ExprContext {
		public Token id;
		public Token op;
		public ExprContext er;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AddSetContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class DecrementContext extends ExprContext {
		public Token id;
		public TerminalNode ID() { return getToken(BcParser.ID, 0); }
		public DecrementContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class NegateContext extends ExprContext {
		public ExprContext el;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NegateContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				_localctx = new FltContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
